# streamdeck-controller

./: ChangeLog.md  Makefile  README.md  elm-package.json  streamdeck-controller.cabal
src/: Main.hs  Opts.hs  Streamdeck.hs
src/Configurator/: Const.hs  Json.hs  Web.hs
src/Data/: Model.hs  Sqlite.hs
src/elm/: Main.elm
src/elm/Decklist/: Comm.elm  State.elm  Types.elm  View.elm
src/elm/Streamdeck/: Comm.elm  State.elm  Types.elm  View.elm
static/: index.html  main.css
