name:                streamdeck-controller
version:             0.0.1
synopsis:            Tooling for controlling the Elgato Stream Deck
-- description:
homepage:            https://github.com/wuest/streamdeck-controller
bug-reports:         https://github.com/wuest/streamdeck-controller
license:             BSD3
license-file:        LICENSE
author:              Tina Wuest
maintainer:          tina@wuest.me
copyright:           2018-2019 Tina Wuest
category:            Hardware
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository    head
  type:            git
  location:        git://github.com/wuest/streamdeck-controller.git

executable streamdeck-controller
  hs-source-dirs:   src
  default-language: Haskell2010
  main-is:          Main.hs
  ghc-options:      -Wall -fwarn-implicit-prelude -fwarn-monomorphism-restriction -O2 -threaded -static
  -- -optl-static -optl-pthread -- Omitted by default: produces binaries which do not work cleanly across libc versions
  other-modules:       
      Opts
    , Streamdeck
  other-modules:      Opts
                    , Streamdeck
                    , View
                    , Const
                    , Routes
                    , Websockets
--                  , Data.Sqlite
  build-depends:      base                  >= 4.9  && < 4.13
                    , hidapi                >= 0.1  && < 0.2
                    , text                  >= 1.2  && < 1.3
                    , file-embed            >= 0.0  && < 0.1
                    , directory             >= 1.3  && < 1.4
                    , transformers          >= 0.5  && < 0.6
                    , mtl                   >= 2.2  && < 2.3
                    , stm                   >= 2.4  && < 2.6
                    , wai                   >= 3.2  && < 3.3
                    , wai-extra             >= 3.0  && < 3.1
                    , wai-middleware-static >= 0.8  && < 0.9
                    , wai-websockets        >= 3.0  && < 3.1
                    , websockets            >= 0.10 && < 0.13
                    , warp                  >= 3.2  && < 3.4
                    , scotty                >= 0.11 && < 0.12
                    , blaze-html            >= 0.9  && < 0.10
                    , blaze-markup          >= 0.8  && < 0.9
                    , aeson                 >= 1.4  && < 1.5
                    , time                  >= 1.8  && < 1.10
                    , monad-logger          >= 0.3  && < 0.4
                    , bytestring            >= 0.10 && < 0.11
--                  , persistent            >= 2.10 && < 2.11
--                  , persistent-template   >= 2.7  && < 2.8
--                  , persistent-sqlite     >= 2.10 && < 2.11
